--- a/roles/aliases/templates/.aliases.redhat.j2
+++ b/roles/aliases/templates/.aliases.redhat.j2
@@ -1,2 +1,4 @@
 alias dnf='sudo dnf'
 alias sshadd='eval $(ssh-agent) && ssh-add'
+alias ll="exa --long --sort type --icons --git"
+sst() { ssh -t $@ "tmux attach -t default-session || tmux set -g default-terminal 'screen-256color' \; new -s default-session"; }
